--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Notion Bookshelf Register</string>
-    <string name="take_photo">Take Photo</string>
-    <string name="start_capture">Start Capture</string>
-    <string name="stop_capture">Stop Capture</string>
+    <string name="notion_api_token">secret_XXX</string>
+    <string name="database_id">XXX</string>
+    <string name="secret_token_description">Secret Token</string>
+    <string name="database_id_description">Database ID</string>
 </resources>
